--- a/_posts/2015-02-21-svg-tips.markdown
+++ b/_posts/2015-02-21-svg-tips.markdown
@@ -7,7 +7,7 @@ categories: SVG
 
 I have been interested in SVG for a while; its capabilities for responsive design and interactivity are rather attractive. I've set myself the challenge to create a dynamic title for my blog site. I decided for a dynamic neon-like logo. I came up with something like this in Ilustrator:
 
-![illustrator screen shoot]({{ site.url }}/img/ilustrator.jpg)
+![illustrator screen shoot]({{ "/img/ilustrator21022015.png" | prepend: site.baseurl }})
 
 
 ### Illustrator graphic export
